--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" media="all" th:href="@{/css/ruches-1.css}" />
 	<link rel="stylesheet" type="text/css" media="all" th:href="@{/js/datatables-1.13.6-2/datatables.min.css}" />
 	<link rel="stylesheet" type="text/css" media="all"
-		th:href="@{/images/bootstrap-icons-1.10.2/bootstrap-icons.css}" />
+		th:href="@{/images/bootstrap-icons-1.11.1/bootstrap-icons.min.css}" />
 	<script th:src="@{/js/jquery-3.7.1.min.js}"></script>
 	<script th:src="@{/js/jquery.validate.min-1.19.5.js}"></script>
 	<script th:src="@{/js/bootstrap-5.3.2/bootstrap.bundle.min.js}"></script>
@@ -52,9 +52,9 @@
 </head>
 
 <script th:fragment="jsruches"
-	th:src="@{'/js/ruches-16/' + ${#strings.substringAfter(#execInfo.processedTemplateName,'/')} + '.js'}">
+	th:src="@{'/js/ruches-17/' + ${#strings.substringAfter(#execInfo.processedTemplateName,'/')} + '.js'}">
 	</script>
-<script th:fragment="jsruchesnom(nom)" th:src="@{'/js/ruches-16/' + ${nom} + '.js'}"></script>
+<script th:fragment="jsruchesnom(nom)" th:src="@{'/js/ruches-17/' + ${nom} + '.js'}"></script>
 
 <script th:fragment="d3" th:src="@{/js/d3.min-7.8.4.js}"></script>
 <script th:fragment="d3-color" th:src="@{/js/d3-color.min-3.1.0.js}"></script>
