rucherPoids.html poids des essaims

--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -90,6 +90,8 @@
 				&nbsp;
 				<a th:href="@{'/rucher/historique/'+${rucher.id}+'/true'}" class="bi-truck-front"
 					th:title="#{transhumances}" aria-hidden="true"></a>
+				&nbsp; <a th:href="@{'/rucher/poids/'+${rucher.id}}" class="bi-graph-up" th:title="#{courbePoids}"
+					aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
