--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -72,8 +72,8 @@
 				</th:block>
 				&nbsp; <a th:href="@{'/essaim/historique/'+${essaim.id}}" class="bi-calendar-check"
 					th:title="#{histoRucheRucher}" aria-hidden="true"></a>
-				&nbsp; <a th:href="@{'/essaim/poids/'+${essaim.id}}" class="bi-graph-up"
-					th:title="#{courbePoids}" aria-hidden="true"></a>	
+				&nbsp; <a th:href="@{'/essaim/poids/'+${essaim.id}}" class="bi-graph-up" th:title="#{courbePoids}"
+					aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
