--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -3,6 +3,10 @@
 
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:replace="~{include :: jsdatetimepicker}"></script>
+
+	<!-- active datetimepicker sur #date-->
+	<script th:replace="~{include :: localejsdatetimepicker}"></script>
+
 	<link th:replace="~{include :: cssdatetimepicker}" />
 	<script th:inline="javascript">
 		const essaimNoms = /*[[${essaimNoms}]]*/null;
@@ -15,6 +19,10 @@
 			jQuery.validator.addMethod('nomExiste', function (value) {
 				return !essaimNoms.includes(value);
 			}, nomexiste);
+
+			const chkActif = document.getElementById('actif1');
+
+
 			$('#essaimForm').validate({
 				errorClass: 'erreur-form',
 				errorPlacement: function (error, element) {
@@ -31,8 +39,38 @@
 					dateAcquisition: {
 						required: true
 					}
+
+					,
+					dateDispersion: {
+						required: function () {
+							return !chkActif.checked;
+						}
+					}
+
 				}
 			});
+
+			// actif1 car c'est une chekbox, si plusieurs cases actif2...
+			// https://www.thymeleaf.org/doc/tutorials/2.1/thymeleafspring.html#checkbox-fields
+			// id date forcé pour datetimepicker
+			const dateDisp = document.getElementById('date');
+			const jqDateDisp = $(dateDisp);
+
+			function datedisp() {
+				if (chkActif.checked) {
+					jqDateDisp.datetimepicker('destroy');
+					dateDisp.value = '';
+					dateDisp.setAttribute('readonly', '');
+				} else {
+					// à quoi sert la classe datepicker ?
+					// dateDisp.classList.remove("datepicker");
+					jqDateDisp.datetimepicker();
+					dateDisp.removeAttribute('readonly');
+				}
+			}
+			datedisp();
+			document.getElementById('actif1').addEventListener('click', datedisp);
+
 		});
 	</script>
 </head>
@@ -67,9 +105,19 @@
 			<input class="form-control" type="text" placeholder="2021-03-26" th:field="*{reineDateNaissance}"
 				th:errorclass="fieldError" />
 			<label class="form-label" th:text="#{reineDateNaissance}" for="reineDateNaissance"></label>
-
 		</div>
 		<div th:replace="~{includeForm :: actifField}"></div>
+
+		<!--/* on force l'id pour datetimepicker sur #date 
+		https://stackoverflow.com/questions/75988981/does-thymeleafs-thfield-generate-an-id-attribute-too
+		en gardant le fragment localejsdatetimepicker
+		*/-->
+		<div class="form-floating mb-3">
+			<input id="date" placeholder="" class="form-control datepicker" type="text" th:field="*{dateDispersion}"
+				th:errorclass="fieldError" /> <label class="form-label" th:text="#{dateDispersion}"
+				for="dateDispersion"></label>
+		</div>
+
 		<div th:replace="~{includeForm :: dateAcquisitionField}"></div>
 		<div th:replace="~{includeForm :: commentaireField}"></div>
 		<div class="form-floating mb-3">
