--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -81,7 +81,7 @@
 		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
-					<th:block th:if="${session.voirInactif}">
+					<th:block th:unless="${essaim.actif}">
 						<th th:text="#{actif}"></th>
 						<th th:text="#{dateDispersion}"></th>
 						<th th:text="#{commDisp}"></th>
@@ -98,8 +98,8 @@
 			</thead>
 			<tbody>
 				<tr>
-					<th:block th:if="${session.voirInactif}">
-						<td th:text="${essaim.actif}? #{oui} : #{non}"></td>
+					<th:block th:unless="${essaim.actif}">
+						<td th:text="#{non}"></td>
 						<td th:text="${#temporals.format(essaim.dateDispersion, 'yyyy/MM/dd')}"></td>
 						<td th:text="${essaim.commDisp}"></td>
 					</th:block>
