--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -56,7 +56,7 @@
 		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
-					<th th:if="${session.voirInactif}" th:text="#{active}"></th>
+					<th th:text="#{active}"></th>
 					<th th:text="#{dateAcquisition}"></th>
 					<th th:text="#{poidsVide}"></th>
 					<th th:text="#{nbCadres}"></th>
@@ -66,7 +66,7 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td th:if="${session.voirInactif}" th:text="${hausse.active}? #{oui} : #{non}"></td>
+					<td th:text="${hausse.active}? #{oui} : #{non}"></td>
 					<td th:text="${hausse.dateAcquisition}"></td>
 					<td class="num" th:text="${#numbers.formatDecimal(hausse.poidsVide,1,2,'DEFAULT')}"></td>
 					<td class="num" th:text="${hausse.nbCadres}"></td>
