--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -99,7 +99,7 @@
 		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
-					<th th:if="${session.voirInactif}" th:text="#{actif}"></th>
+					<th th:text="#{actif}"></th>
 					<th th:text="#{depot}"></th>
 					<th th:text="#{contact}"></th>
 					<th th:text="#{adresse}"></th>
@@ -116,7 +116,7 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td th:if="${session.voirInactif}" th:text="${rucher.actif}? #{oui} : #{non}"></td>
+					<td th:text="${rucher.actif}? #{oui} : #{non}"></td>
 					<td th:text="${rucher.depot}? #{oui} : #{non}"></td>
 					<td><a th:href="@{'/personne/'+${rucher.contact?.id}}" th:text="${rucher.contact?.nom}"></a></td>
 					<td th:text="${rucher.adresse}"></td>
