--- a/src/main/resources/templates/ruchetype/rucheTypeForm.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeForm.html
@@ -55,6 +55,7 @@
 	</div>
 	<form action="#" th:action="@{/rucheType/sauve}" th:object="${rucheType}" method="post" id="rucheTypeForm">
 		<input type="hidden" th:field="*{id}" />
+		<input type="hidden" th:field="*{version}" />
 		<div th:replace="~{includeForm :: nomField}"></div>
 		<div class="form-floating mb-3">
 			<input placeholder="" class="form-control" type="number" th:field="*{nbCadresMax}"
