internationalisation. essaimsPoids amélioration si pas de pesée.

--- a/src/main/resources/templates/essaim/essaimsPoids.html
+++ b/src/main/resources/templates/essaim/essaimsPoids.html
@@ -23,18 +23,20 @@
 	<br />
 	<br />
 	<div class="container-fluid">
-		<canvas id="ctx"></canvas>
+		<canvas th:unless="${#arrays.isEmpty(dates)}" id="ctx"></canvas>
 		<div class="row">
 			<div class="col text-center">
 				<h1 class="item">
 					<a th:href="@{'/essaim/'+${essaim.id}}" th:text="#{essaim}+' '+${essaim.nom}"></a>
 					<th:block th:text="' '+#{RUCHEPESEE}"></th:block>
-
 					<th:block th:if="${ruche}" th:text="' ('+#{vide}+' '
-					+${#numbers.formatDecimal(ruche.poidsVide,1,2,'COMMA')}+' )'
-					"></th:block>
-
+					  +${#numbers.formatDecimal(ruche.poidsVide,1,2,'COMMA')}+' )'"></th:block>
 				</h1>
+			</div>
+		</div>
+		<div th:if="${#arrays.isEmpty(dates)}" class="row">
+			<div class="col text-center">
+				<span th:text="#{aucunePesee}"></span>
 			</div>
 		</div>
 	</div>
