--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -15,7 +15,7 @@
 				ruchetxt, lesHausses, pasdehaussetxt, parcourstxt, ignCarteLiscense,
 				parcoursoptimumtxt, ruchestxt, distancedeparcourstxt, entreetxt, ruchesurl, _csrf_token, dessinEnregistretxt,
 				distRuchesOk, distMaxRuche, geoloc, bootstrap, pasDeGeoLoc, recherchePos, locImpossible, distDiminuee,
-				calculEnCours
+				calculEnCours, pasDAmelioration
 				*/
 		/* globals rucherDetail jsPDF */
 		let rucheParcours = /*[[${rucheParcours}]]*/ null;
@@ -52,6 +52,7 @@
 		const locImpossible = /*[[#{locImpossible}]]*/ null;
 		const distDiminuee = /*[[#{distDiminuee}]]*/ null;
 		const calculEnCours = /*[[#{calculEnCours}]]*/ null;
+		const pasDAmelioration = /*[[#{pasDAmelioration}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => rucherDetail(false));
 	</script>
 	<script th:replace="~{include :: cssol}"></script>
