--- a/src/main/resources/templates/personne/personneDetail.html
+++ b/src/main/resources/templates/personne/personneDetail.html
@@ -14,7 +14,18 @@
 					return;
 				}
 				event.preventDefault();
-			});
+			});		
+			const tel = document.getElementById('tel');
+			const tels = tel.textContent.split('/');
+			tel.textContent = '';
+			tels.forEach(el => {
+				el = el.trim();
+				const link = document.createElement('a');
+				link.href = 'tel://' + el;
+				link.innerText = el;
+				tel.appendChild(link);
+				tel.appendChild(document.createElement('br'));
+			})
 		});
 	</script>
 </head>
@@ -54,7 +65,7 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td th:utext="${#strings.replace(#strings.escapeXml(personne.tel),'&#10;','<br/>')}"></td>
+					<td id="tel" th:text="${personne.tel}"></td>
 					<td><a th:href="@{'mailto:'+${personne.email}(subject=Ruches,body=${personne.prenom})}"
 							th:text="${personne.email}"></a></td>
 					<td th:text="${personne.adresse}"></td>
